# cplus_init

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: config.hpp.in
src/: main.cpp
